@@ -1,5 +1,6 @@
 - audit options for what's new/deprecated/removed from FC5->FC6
-- add more versious, of course
+- add FC4, RHEL4, RHEL5
+- set up real DEVEL version
 - should the three kinds of scripts be three different objects?
 - redo documentation
 - add back in multipath support
